<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@+id/scrollPantalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_titulo"
        android:textSize="@dimen/tamaño_letra"
        android:paddingTop="@dimen/padding"/>

    <EditText
        android:id="@+id/editTxtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_titulo"
        android:cursorVisible="false"/>

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_descripcion"
        android:textSize="@dimen/tamaño_letra"
        android:paddingTop="@dimen/padding"/>

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/hint_descripcion"
        android:inputType="textMultiLine"
        android:cursorVisible="false"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="@dimen/tamaño_letra"
        android:paddingTop="@dimen/padding"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:cursorVisible="false"/>

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_precio"
        android:textSize="@dimen/tamaño_letra"
        android:paddingTop="@dimen/padding"/>

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hint_precio"
        android:cursorVisible="false"/>

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_categoria"
        android:textSize="@dimen/tamaño_letra"
        android:paddingTop="@dimen/padding"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewPorcentajeDescuento"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_descuento"
            android:layout_weight="1"
            android:textSize="@dimen/tamaño_letra"
            android:paddingTop="@dimen/padding"/>
        <Switch
            android:id="@+id/switchDescuento"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_descuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textViewCero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_cero"
            android:textSize="@dimen/tamaño_letra"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="100"
            />
        <TextView
            android:id="@+id/textViewCien"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_cien"
            android:textSize="@dimen/tamaño_letra"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_retiro_en_persona"/>

    <TextView
        android:id="@+id/textViewDireccionRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_direccion_retiro"
        android:visibility="gone"
        android:textSize="@dimen/tamaño_letra"
        android:paddingTop="@dimen/padding"/>

    <EditText
        android:id="@+id/editTextDireccionRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_direccion_retiro"
        android:visibility="gone"
        android:cursorVisible="false"/>

    <CheckBox
        android:id="@+id/checkBoxTerminosCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_terminos_condiciones" />

    <Button
        android:id="@+id/buttonPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Publicar"
        android:visibility="gone"
        android:text="@string/text_publicar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>